# skminer

./: .gitignore  Activity1.nvact  Makefile.am  README  README.md  README.txt  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  core.h  cpu-miner.cpp  cpuminer-config.h  cuda_helper.h  miner2.h  test_750ti.bat  types.h  util_llh.cpp  util_llh.h
Algo/: cuda_skein1024.cu  sk1024.cu  sk1024_keccak.cu
hash/: CBlock.cpp  CBlock.h  Connection.cpp  Connection.h  DDOS_Filter.cpp  DDOS_Filter.h  DDOS_Score.cpp  DDOS_Score.h  Keccak-compact64.c  KeccakDuplex.c  KeccakDuplex.h  KeccakHash.c  KeccakHash.h  KeccakSponge.c  KeccakSponge.h  Miner.cpp  Miner.h  MinerThread.cpp  MinerThread.h  Outbound.cpp  Outbound.h  Packet.cpp  Packet.h  Timer.cpp  Timer.h  skein.cpp  skein_block.cpp  templates.h
heavy/: heavy.cu
